ingress-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-app
  namespace: learning-ingress
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
