ingress-deployment/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: learning-ingress
spec:
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
